# nxpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  ISSUE_PR_PLAN.md  LICENSE  NOTES.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SESSION.md  TODO.md  conanfile.py  main.cpp  main.py  main_boost.cpp  main_nxpp.cpp
.github/workflows/: compatibility.yml  docs-pages.yml  external-consumers.yml  large-graph-compare.yml  release.yml  single-header.yml  snippet-review.yml  tests.yml  wasm-experimental.yml
BGL_snippet/flow/: flow.cpp  mcmf_cc.cpp
assets/doxygen/: custom.css
benchmark/: BENCHMARK.md  compilation_snippet.csv  compile_bench_all.csv  compile_bench_all_2026-03-29_10it.csv  compile_bench_all_parallel_2026-03-29_10it.csv  parallel_all_i3_j4_20260330_000147.csv  serial_all_i3_20260330_000147.csv
cmake/: nxppConfig.cmake.in
docs/: API_ARCHITECTURE.md  API_REFERENCE.md  ATTRIBUTE_DESIGN.md  COMPLEXITY.md  DOXYGEN_MAINPAGE.md  EXTERNAL_USAGE.md  GRAPH_CONFIGURATION.md  README.md  STABILITY.md  TEST.md
include/: SimpleDirectedGraph.hpp  SimpleGraph.hpp  SimpleWeightedGraphBase.hpp  nxpp.hpp
include/algorithms/: components.hpp  shortest_paths.hpp  traversals.hpp
include/nxpp/: attributes.hpp  centrality.hpp  components.hpp  flow.hpp  generators.hpp  graph.hpp  multigraph.hpp  sat.hpp  shortest_paths.hpp  spanning_tree.hpp  topological_sort.hpp  traversal.hpp
include_modular/: base.hpp  components.hpp  generators.hpp  graph.hpp  nxpp.hpp  shortest_paths.hpp  traversals.hpp  types.hpp
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/aur/docker/: Dockerfile  smoke.sh
packaging/vcpkg/ports/nxpp/: portfile.cmake  vcpkg.json
py_snippet/flow/: flow.py  mcmf_cc.py  mcmf_ssp.py
py_snippet/graph_operations/: bfs.py  cc.py  dfs.py  dijkstra.py  kruskal.py  scc.py  ts.py
scripts/: benchmark_snippet_compile.sh  benchmark_snippet_compile_parallel.sh  build_single_header.py  build_single_header.sh  check_release_metadata_versions.py  extract_release_notes.py  log_snippet_folder.sh  run_benchmark_report.py  run_large_graph_compare.sh  run_single_header_tests.sh  run_tests.sh  sync_modular_headers.py  test_single_snippet.sh  test_snippet_batch.sh  test_snippets.sh
scripts/unix/: benchmark_snippet_compile.sh  benchmark_snippet_compile_parallel.sh  build_single_header.sh  log_snippet_folder.sh  run_external_consumer_tests.sh  run_large_graph_compare.sh  run_single_header_tests.sh  run_tests.sh  test_single_snippet.sh
scripts/windows/: benchmark_snippet_compile.ps1  benchmark_snippet_compile_parallel.ps1  build_single_header.ps1  common.ps1  log_snippet_folder.ps1  run_large_graph_compare.ps1  run_single_header_tests.ps1  run_tests.ps1  test_single_snippet.ps1
snippet/2sat/: 2sat.py  2sat_helper_nxpp.cpp  2sat_nxpp.cpp
snippet/bellman_ford/: bellman_ford.py  bellman_ford_nxpp.cpp
snippet/bfs/: bfs.py  bfs_nxpp.cpp
snippet/cc/: cc.py  cc_nxpp.cpp
snippet/centrality/: centrality.cpp  centrality.py  centrality_nxpp.cpp
snippet/dag_sp/: dag_sp.py  dag_sp_nxpp.cpp
snippet/dfs/: dfs.py  dfs_nxpp.cpp
snippet/dijkstra/: dijkstra.py  dijkstra_nxpp.cpp
snippet/dot/: dot.py  dot_nxpp.cpp
snippet/flow/: flow.py  flow_nxpp.cpp
snippet/floyd_warshall/: floyd_warshall.py  floyd_warshall_nxpp.cpp
snippet/graph_example/: graph_example.py  graph_example_nxpp.cpp
snippet/graph_weights/: graph_weights.py  graph_weights_nxpp.cpp
snippet/kruskal/: kruskal.py  kruskal_nxpp.cpp
snippet/mcmf_cc/: mcmf_cc.py  mcmf_cc_nxpp.cpp
snippet/mcmf_spp/: mcmf_ssp.py  mcmf_ssp_nxpp.cpp
snippet/mcmf_ssp/: mcmf_ssp.cpp  mcmf_ssp_nxpp.cpp
snippet/prim/: prim.py  prim_nxpp.cpp
snippet/scc/: scc.cpp  scc.py  scc_nxpp.cpp
snippet/scc_named/: scc_named.py  scc_named_nxpp.cpp
snippet/ts/: ts.py  ts_nxpp.cpp
test_suite/: bfs_actual.json  bfs_expected.json  cc_actual.json  cc_expected.json  compare_results.py  dijkstra_actual.json  graph.edgelist  nxpp_test_runner.cpp  run_nx_baseline.py
tests/: test_attributes.cpp  test_centrality.cpp  test_core.cpp  test_edge_cases.cpp  test_flow.cpp  test_large_graph_compare.cpp  test_multigraph.cpp  test_remove_node.cpp
tests/external_consumers/installed_cmake/: CMakeLists.txt  main.cpp
tests/external_consumers/single_header/: main.cpp
tests/external_consumers/vendored_cmake/: CMakeLists.txt  main.cpp
wasm/: .npmrc.publish-github  .npmrc.publish-npm  ARCHITECTURE_PLAN.md  README.md  WASM.md  nxpp.mjs  nxpp_example.js  nxpp_example.ts  package-lock.json  package.json  tsconfig.json
wasm/include/: nxpp_wasm.hpp
wasm/include/nxpp_wasm/: attributes.hpp  centrality.hpp  components.hpp  flow.hpp  generators.hpp  graph.hpp  multigraph.hpp  register_all.hpp  sat.hpp  shortest_paths.hpp  spanning_tree.hpp  topological_sort.hpp  traversal.hpp
wasm/include/nxpp_wasm/common/: binding_utils.hpp  errors.hpp  js_convert.hpp
wasm/node/: node_api_contract_test.mjs  nxpp_bindings.cpp  nxpp_node_bindings.cpp
wasm/scripts/: build_wasm_node_module.sh  run_npm_pack_consumer_test.sh  run_wasm_node_contract_tests.sh  run_wasm_tests.sh
wasm/src/: attributes.cpp  centrality.cpp  components.cpp  flow.cpp  generators.cpp  graph.cpp  multigraph.cpp  nxpp_wasm.cpp  sat.cpp  shortest_paths.cpp  spanning_tree.cpp  topological_sort.cpp  traversal.cpp
wasm/src/common/: errors.cpp  js_convert.cpp
wasm/test/: node_api_contract_test.mjs
wasm/test/node_api_contract/: attributes.test.mjs  error_mapping.test.mjs  exports.test.mjs  helpers.mjs  lifetime.test.mjs  multigraph.test.mjs  shortest_paths.test.mjs  simple_graph.test.mjs  spanning_tree.test.mjs  traversal.test.mjs  type_validation.test.mjs
wasm/test/npm_pack_consumer/: package.json  smoke_test.mjs
wasm/ts/: index.ts  load.ts  types.ts
wasm/ts/algorithms/: shortest_paths.ts  traversal.ts
wasm/ts/compile_checks/: facade_contract.ts
wasm/ts/core/: attributes.ts  graph.ts  multigraph.ts
wasm/ts/internal/: assert.ts  build_module.d.ts  errors.ts  wasm_types.ts  wrap.ts
